Final edits and commit

--- a/templates/blast_results.html
+++ b/templates/blast_results.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
 <div class="page-header">
   <body>
-    <h1>BLAST Results</h1>
+    <h1><strong>BLAST Results</strong></h1>
     <p>Here are the database hits based on the information you have BLASTed!</p>
   </body>
 </div>
