--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,14 @@
           <input type ="submit" name="action" value="Go to Search">
       </div>
       <div class="panel-body"; style="float:right;clear: right;">
+          <input type ="submit" name="action" value="Go to BLAST">
+      </div>
+      <div class="panel-body"; style="float:right;clear: right;">
           <input type ="submit" name="action" value="Go to Browse">
       </div>
-      
+      <div class="panel-body"; style="float:right;clear: right;">
+          <input type ="submit" name="action" value="Upload an Entry!">
+      </div>
       
       
 </form>
