--- a/templates/ref.html
+++ b/templates/ref.html
@@ -35,6 +35,8 @@
       	<p style = "line-height:1.0;"> ⬤ Pandas - <a href = "https://pandas.pydata.org/">Documentation</a></p>
       	<p style = "line-height:1.0;"> ⬤ OS - <a href = "https://docs.python.org/3/library/os.html">Documentation</a></p>
       	<p style = "line-height:1.0;"> ⬤ Bio.Blast.Applications - NcbiblastpCommandLine - <a href = "https://biopython.org/docs/1.75/api/Bio.Blast.Applications.html">Documentation</a></p>
+            <p style = "line-height:1.0;"> ⬤ Flask_Heroku - Heroku - <a href = "https://devcenter.heroku.com/articles/getting-started-with-python#set-up">Documentation</a></p>
+            
 </div>
 
 
