--- a/templates/search.html
+++ b/templates/search.html
@@ -5,11 +5,8 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Search:</h1>
-  <body>
-    <h1> Wolbachia CIF Gene Database</h1>
-    <h2> Search the Database! </h2>
-  </body>
+    <h1><strong>Search the Database!</strong></h1>
+  
 </div>
 <strong>Please choose one of the following:</strong>
 <p>
