--- a/templates/base.html
+++ b/templates/base.html
@@ -36,9 +36,10 @@ li a:hover {
 <body>
 
 <ul>
-    <div style="color:#90ee90;font-size:240%;float:left">The CIF Gene Database</div>
+    <div style="color:#90ee90;font-size:240%;float:left"><strong>The CIF Gene Database</strong></div>
     <li><a href="/ref">References</a></li>
     <li><a href="/help">Help</a></li>
+    <li><a href="/blast">BLAST</a></li>
     <li><a href="/browse">Browse</a></li>
     <li><a href="/search">Search</a></li>
     <li><a href="/about">About</a></li>
