--- a/templates/blast.html
+++ b/templates/blast.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>BLAST Search against Database Entries</h1>
+    <h1><strong>BLAST Search Against Database Entries</strong></h1>
   <body>
     <p>BLAST finds regions of similarity between biological sequences. The program compares protein sequences.</p>
   </body>
