--- a/templates/browse.html
+++ b/templates/browse.html
@@ -5,11 +5,9 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Browse:</h1>
-  <body>
-    <h1> Wolbachia CIF Gene Database</h1>
-    <h2> Browse the Database! </h2>
-  </body>
+    
+    <h1><strong> Browse the Database! </strong></h1>
+  
 </div>
 <strong>Please choose one of the following:</strong>
 <p>
