--- a/templates/browse_results.html
+++ b/templates/browse_results.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
 <div class="page-header">
   <body>
-    <h1>Browse Results</h1>
+    <h1><strong>Browse Results</strong></h1>
     <p>Here are the database hits based on the parameters you chose!</p>
 </div>
 </head>
