--- a/templates/results.html
+++ b/templates/results.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
 <div class="page-header">
   <body>
-    <h1>Search Results</h1>
+    <h1><strong>Search Results</strong></h1>
     <p>Here are the database hits based on the information you have entered!</p>
 </div>
 </head>
