--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,10 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Upload Entry</h1>
-  <body>
-    <h2>Upload an entry to the database!</h2>
-  </body>
+<h1><strong>Upload an entry to the database!</strong></h1>
 </div>
 <strong>Please enter all of the required information!</strong>
 <p>
