--- a/templates/upload_ty.html
+++ b/templates/upload_ty.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1> Your submission will be reviewed and included in the next update! </h1>
+    <h1><strong>Your submission will be reviewed and included in the next update!</strong></h1>
 
 </div>
 {% endblock %}
